# somepad

./: Cargo.toml  TODO.txt  readme.md
ndoc/: Cargo.toml
ndoc/src/: document.rs  file_info.rs  lib.rs  rope_utils.rs  syntax.rs  theme.rs
ndoc/test_assets/: expected.txt  utf8-demo.txt
ui/cushy/: Cargo.toml
ui/cushy/src/: main.rs  scroll.rs  settings.rs  shortcut.rs  utils.rs
ui/cushy/src/widgets/: editor_switcher.rs  editor_window.rs  filtered_list.rs  input.rs  mod.rs  opened_editor.rs  palette.rs  scroll.rs  side_bar.rs  splitter.rs  status_bar.rs  text_editor.rs
ui/druidshell/: Cargo.toml
ui/floem/: Cargo.toml
ui/floem/src/: command.rs  decorators.rs  documents.rs  main.rs  settings.rs  shortcut.rs  theme.rs
ui/floem/src/widgets/: mod.rs  palette.rs  window.rs
ui/ratatui/: Cargo.toml
ui/ratatui/src/: main.rs  text_area.rs
ui/vizia/: Cargo.toml
ui/vizia/src/: main.rs  text_area.rs
