[package]
name = "ndoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "0.1.17"
encoding_rs = "0.8.33"
itertools = "0.13.0"
nonepad-vscodetheme = "0.1.0"
once_cell = "1.19.0"
print-positions = "0.6.1"
ropey = "1.6.1"
serde = { version = "1.0.197", features = ["derive"] }
syntect = "5.2.0"
unicode-segmentation = "1.10.1"
