[package]
name = "ncode-floem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xncode"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = {git = "https://github.com/lapce/floem"}
im = "15.1.0"
ndoc = {path = "../../ndoc"}
