[package]
name = "ncode-floem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xncode"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-art = "0.3.7"
crossbeam-channel = "0.5.12"
floem = {git = "https://github.com/lapce/floem"}
im = "15.1.0"
ndoc = {path = "../../ndoc"}
smol_str = "0.2.1"
