[package]
name = "ncode-floem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xncode"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
color-art = "0.3.7"
crossbeam-channel = "0.5.12"
directories = "5.0.1"
floem = {git = "https://github.com/lapce/floem", features = ["rfd-async-std"], rev = "ab125b7" }
im = "15.1.0"
ndoc = {path = "../../ndoc"}
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
smol_str = "0.2.1"
toml = { version = "0.8.12", features = ["preserve_order"] }
toml_edit = { version = "0.22.9", features = ["serde"] }
