[package]
name = "ncode-vizia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xncode"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndoc = {path = "../../ndoc", features = ["vizia"]}
vizia = {git = "https://github.com/vizia/vizia"}
once_cell = "1.19"